# VerseViewer

./: README.md  VerseViewer.c  VerseViewer.lnk  VerseViewer.vala  VerseViewerGtk  VerseViewerGtk.vala  main.vala  makefile  meson.build  myapp.ilk  styleapp.css
data/flutter_assets/: NOTICES
etc/gtk-3.0/: settings.ini
